fixed screen size on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
     display: flex;
     gap: 10px;
     margin: 5px;
+    flex-wrap: wrap;
 }
 
 #grid {
